--- a/management-report/markdown/subpage-trends.Rmd
+++ b/management-report/markdown/subpage-trends.Rmd
@@ -112,7 +112,6 @@ pds_ijb_rates <- pds_all_rates %>% filter(geog != "Scotland", !grepl("NHS", geog
 
 
 
-
  
 ```
 <!-- TO DO: consolidate above into data_prep file -->
@@ -154,7 +153,7 @@ Row
 **Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.**
 
 
-Row {.tabset data-height=550}
+Row {.tabset data-height=565}
 ----------------------------------------------------------------------
 
 ### **Scotland**
@@ -301,7 +300,7 @@ Row
 **Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.**
 
 
-Row {.tabset data-height=560}
+Row {.tabset data-height=565}
 ----------------------------------------------------------------------
 
 ### **Trend by Financial Year**
@@ -323,7 +322,7 @@ data_filter_hb_ijb_pop,NULL)
 <h2 style="margin-left: 50px; margin-top: 0px; margin-bottom: 0px"> Number of Individuals Diagnosed and Referred for PDS per 10,000 Population </h2>
 ```{r trend-plot-pop}
 
- trends_pop_plot <- plot_trend(pds_trends_pop_data, pop_rate_10000, x ="Financial Year of Diagnosis", y = "Rate Per 10,000 Popuation")
+ trends_pop_plot <- plot_trend(pds_trends_pop_data, pop_rate_10000, x ="Financial Year of Diagnosis", y = "Rate Per 10,000 Popuation", colours = phs_colours_46)
 
 bscols(widths = 12,
  trends_pop_plot)
